--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,5 @@
 /WebApplication5/nbproject/private/
 /MyProject/nbproject/private/
+/BondInCamvas/nbproject/private/
+/BondInCamvas/build/
+/PRJ301_Assignment/nbproject/private/
